--- a/resources/styles/app.scss
+++ b/resources/styles/app.scss
@@ -4,5 +4,20 @@
 
 html {
   background-color: #1e1e1e;
-  color: yellowgreen;
+  color: white;
+}
+
+h1{
+  font-size: 40px;
+  margin-bottom: 20px;
+}
+
+.main {
+  padding: 5%;
+  max-width: 900px;
+  margin: auto;
+}
+
+p {
+  padding-bottom: 10px;
 }
